# hackernews.bot

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
etc/hackernews_bot/: config.ini.example
hackernews_bot/: config.py  consts.py  exceptions.py
hackernews_bot/bot/: api.py  middlewares.py
hackernews_bot/cmd/: cli.py
hackernews_bot/hackernews/: client.py
